<resources>
    <string name="app_name" translatable="false">ProjetoIntegrador</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>

    <!--    HomeFragment-->
    <string name="create_campaign">Create your campaign</string>
    <string name="login_an_create_a_campaign">Login and create a campaign</string>
    <string name="text_body">Here you can find the \ndonations points nearest from you</string>
    <string name="can_create_campaign">You can also create your campaign</string>
    <string name="access_map">Access map</string>
    <string name="create_a_campaign">Create a campaign</string>

    <!--    LoginFragment-->
    <string name="password">Password</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="login" translatable="false">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign up</string>
    <string name="do_not_have_account">Don\' t have an account?</string>
    <string name="logged_message">LoggedIn as %s</string>
    <string name="login_failed_message">Login Failed</string>
    <string name="review_credentials">Please review the credentials</string>

    <!--    ProfileFragment-->
    <string name="my_campaigns">My campaigns</string>
    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="logged_area">Logged area</string>
    <string name="about">About</string>
    <string name="app_description"> This is an application develop as a Capstone Project of IT course at IFSC. It\'s non-profit and its goal(besides exploring the knowledge acquired during the course) is to bring together donors and people/institutions that are looking for donations. This is an open source project, which you can contribute and find at: "https://github.com/AbelVolpi/PI_Application". </string>
    <string name="welcome_back">Welcome back</string>
    <string name="my_account">My account</string>
    <string name="possible_actions">Actions:</string>
    <string name="delete_account">Delete account</string>
    <string name="are_you_sure">Are you sure you want to delete this account? This is an irreversible action.</string>
    <string name="want_quit">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--    CreateCampaignFragment-->
    <string name="category">Category</string>
    <string name="campaign_name">Campaign name</string>
    <string name="campaign_address">Campaign address</string>
    <string name="campaign_category">Campaign category</string>
    <string name="create">Create</string>
    <string name="review_fields">Please review all fields</string>
    <string name="campaign_created_successfully">Campaign created successfully </string>
    <string name="could_not_create_your_campaign">Could not create your campaign</string>
    <string name="error_has_occurred">An error has occurred</string>
    <string name="description">Description</string>
    <string name="street">Street</string>
    <string name="number">Number</string>
    <string name="district">District</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="add_photo_of_yout_campaign">Add photo of your campaign</string>

    <!--    MapsFragment-->
    <string name="address_model" translatable="false">%s, %s - %s, %s - %s</string>

    <!--    SignUp-->
    <string name="sign_up_completed">Sign up completed as %s</string>

    <!--    FilterFragment-->
    <string name="filter">Filter</string>
    <string name="foods" translatable="false">Alimentos</string>
    <string-array name="donate_options">
        <item>Outros</item>
        <item>Alimentos</item>
        <item>Rações</item>
        <item>Roupas</item>
    </string-array>

    <!--    RegisterFragment-->
    <string name="confirm_password">Confirm Password</string>

    <!--    CampaignsHistoricFragment-->
    <string name="you_havent_created_a_campaign_yet">You haven\'t created a campaign yet :/</string>

    <!--    ViewCampaignFragment-->
    <string name="address">Address:</string>

    <!--    ForgotPasswordFragment-->
    <string name="confirm">Confirm</string>
    <string name="email_sent">Email sent with success</string>

    <string name="content" translatable="false">Lorem ipsum dolor sit amet. Qui aliquam harum in asperiores nihil aut dicta incidunt saepe tempore id nihil magnam ut velit numquam. 33 nulla sunt eum aspernatur similique aut sunt quod ea galisum ullam.

Cum expedita beatae et dicta dolorem est nobis nisi eum harum quia ut sequi porro vel Quis soluta! Et omnis consequatur non culpa molestias sit voluptas autem. Sed voluptatem necessitatibus ut deserunt Quis qui sint neque est illo nihil nam velit veritatis est adipisci reiciendis>Lorem ipsum dolor sit amet. Qui aliquam harum in asperiores nihil aut dicta incidunt saepe tempore id nihil magnam ut velit numquam. 33 nulla sunt eum aspernatur similique aut sunt quod ea galisum ullam.

Cum expedita beatae et dicta dolorem est nobis nisi eum harum quia ut sequi porro vel Quis soluta! Et omnis consequatur non culpa molestias sit voluptas autem. Sed voluptatem necessitatibus ut deserunt Quis qui sint neque est illo nihil nam velit ver>Lorem ipsum dolor sit amet. Qui aliquam harum in asperiores nihil aut dicta incidunt saepe tempore id nihil magnam ut velit numquam. 33 nulla sunt eum aspernatur similique aut sunt quod ea galisum ullam.

Cum expedita beatae et dicta dolorem est nobis nisi eum harum quia ut sequi porro vel Quis soluta! Et omnis consequatur non culpa molestias sit voluptas autem. Sed voluptatem necessitatibus ut deserunt Quis qui sint neque est illo nihil nam velit ver>Lorem ipsum dolor sit amet. Qui aliquam harum in asperiores nihil aut dicta incidunt saepe tempore id nihil magnam ut velit numquam. 33 nulla sunt eum aspernatur similique aut sunt quod ea galisum ullam.

Cum expedita beatae et dicta dolorem est nobis nisi eum harum quia ut sequi porro vel Quis soluta! Et omnis consequatur non culpa molestias sit voluptas autem. Sed voluptatem necessitatibus ut deserunt Quis qui sint neque est illo nihil nam velit ver.</string>


    <string name="campaign_removed_successfully">Campaign removed successfully</string>
</resources>