<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="nav_view">
    <item
        android:id="@+id/historic_item"
        android:icon="@drawable/ic_historic"
        android:title="@string/my_campaigns" />
    <item
        android:id="@+id/account_item"
        android:icon="@drawable/ic_settings"
        android:title="@string/my_account" />

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/about_item"
                android:icon="@drawable/ic_question"
                android:title="@string/about" />
            <item
                android:id="@+id/logout_item"
                android:icon="@drawable/ic_login"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>